tests/ui/higher-ranked/subtype/hr-subtype.free_x_vs_free_y.stderr
error: lifetime may not live long enough
  --> $DIR/hr-subtype.rs:54:13
   |
LL | / macro_rules! check {
LL | |     ($rev:ident: ($t1:ty, $t2:ty)) => {
LL | |         #[cfg($rev)]
LL | |         fn subtype<'x, 'y: 'x, 'z: 'y>() {
...  |
LL | |         fn supertype<'x, 'y: 'x, 'z: 'y>() {
   | |                      --  -- lifetime `'y` defined here
   | |                      |
   | |                      lifetime `'x` defined here
LL | |             gimme::<$t1>(None::<$t2>);
   | |             ^^^^^^^^^^^^^^^^^^^^^^^^^ argument requires that `'x` must outlive `'y`
...  |
LL | |     };
LL | | }
   | |_- in this expansion of `check!`
...
LL | / check! { free_x_vs_free_y: (fn(&'x u32),
LL | | fn(&'y u32)) }
   | |______________- in this macro invocation
   |
   = help: consider adding the following bound: `'x: 'y`

error: aborting due to previous error

